apps/dssp-targetnode-12/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dssp-targetnode-12
  namespace: dev
  labels:
    app: dssp-targetnode-12
    backstage.io/kubernetes-id: dssp-targetnode-12
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dssp-targetnode-12
  template:
    metadata:
      labels:
        app: dssp-targetnode-12
        backstage.io/kubernetes-id: dssp-targetnode-12
        environment: dev
    spec:
      containers:
        - name: dssp-targetnode-12
          image: chaitanyapandeygspann/dssp-targetnode-12:1.0.4
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "384Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
