apps/dssp-targetnode-12/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dssp-targetnode-12
  namespace: dev
  labels:
    backstage.io/kubernetes-id: dssp-targetnode-12
spec:
  selector:
    app: dssp-targetnode-12
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
